<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/article_scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_club"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_department_chief"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_department_name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_department_email"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:autoLink="email"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_competition_site_headline"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_competition_site_address"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_competition_email"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:autoLink="email"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_app_developer"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_app_developer_name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_app_developer_email"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:autoLink="email"/>

     <View
        android:layout_width="fill_parent"
        android:layout_height="30dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>